--- a/src/features/catalog/formatList/UI/styles.module.scss
+++ b/src/features/catalog/formatList/UI/styles.module.scss
@@ -13,7 +13,7 @@
     column-gap: 10px;
     align-items: center;
     justify-content: start;
-    padding: 10px;
+    padding: 5px 10px;
     border-radius: 10px;
     background: var(--Personal-colors-White);
     cursor: pointer;
@@ -23,7 +23,7 @@
       font-size: 16px;
       font-style: normal;
       font-weight: 500;
-      line-height: 0.75;
+      line-height: normal;
       overflow: hidden;
       text-overflow: ellipsis;
       white-space: nowrap;
