--- a/src/features/catalog/recomTargetCard/UI/styles.module.scss
+++ b/src/features/catalog/recomTargetCard/UI/styles.module.scss
@@ -1,9 +1,10 @@
 .wrapper {
   display: grid;
   grid-template: 1fr / 14fr 1fr;
+  column-gap: 10px;
   border-radius: 10px;
   align-content: start;
-  border: 0.25px solid var(--Containers);
+  box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, 0.2);
   padding: 10px;
   cursor: pointer;
 
@@ -13,6 +14,23 @@
     row-gap: 15px;
     color: var(--Personal-colors-black);
     padding: 5px;
+
+    height: 150px;
+    overflow-y: scroll;
+
+    &::-webkit-scrollbar {
+      width: 2px;
+      height: 2px;
+      background-color: #ccc;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      cursor: pointer;
+      background-color: #999;
+      border-radius: 5px;
+    }
 
     &__row {
       // display: grid;
