--- a/src/features/order/feedback/UI/styles.module.scss
+++ b/src/features/order/feedback/UI/styles.module.scss
@@ -1,20 +1,22 @@
 .button {
   width: 100%;
   height: 100%;
-  cursor: pointer;
-  border-radius: 8px;
-  padding: 0px;
-  font-weight: 500;
   display: grid;
   grid-auto-flow: column;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
+  padding: 0px;
+  font-weight: 500;
   gap: 5px;
   padding: 10px;
-
   color: var(--Personal-colors-main);
-  border: 1px solid var(--Personal-colors-main);
+  line-height: 0.75;
+
+  border-radius: 8px;
+  border: 0.2px solid rgba(0, 0, 0, 0.1);
   background: var(--Personal-colors-White);
+  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.1);
 
   &:hover {
     background: rgb(237, 237, 237);
