--- a/src/features/order/rejectPost/UI/styles.module.scss
+++ b/src/features/order/rejectPost/UI/styles.module.scss
@@ -2,16 +2,17 @@
   width: 100%;
   height: 100%;
   cursor: pointer;
-  border-radius: 8px;
-  padding: 0px;
   font-weight: 500;
   display: flex;
   justify-content: center;
   align-items: center;
 
   color: var(--Personal-colors-main);
-  border: 1px solid var(--Personal-colors-main);
+  border-radius: 8px;
+  border: 0.2px solid rgba(0, 0, 0, 0.1);
   background: var(--Personal-colors-White);
+  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.1);
+
   &:hover {
     background: rgb(237, 237, 237);
   }
