--- a/src/widgets/project/advertiser/UI/advProjects/card/UI/styles.module.scss
+++ b/src/widgets/project/advertiser/UI/advProjects/card/UI/styles.module.scss
@@ -8,6 +8,13 @@
   .card {
     display: grid;
     grid-template: 1fr / 7.5fr 12fr 1.4fr;
+    // box-shadow: 0px 2px 12px 0px rgba(0, 0, 0, 0.19);
+
+    @media (max-width: 768px) {
+      grid-template: unset;
+      grid-auto-flow: row;
+      row-gap: 15px;
+    }
 
     &__description {
       display: grid;
@@ -16,12 +23,22 @@
       padding: 0 20px 0 30px;
       border-right: 1px solid var(--Card-separator);
 
+      @media (max-width: 992px) {
+        padding: 0 15px;
+        grid-template: min-content 1fr / 1fr;
+      }
+
+      @media (max-width: 768px) {
+        border-right: none;
+      }
+
       &__data {
         display: grid;
         grid-auto-flow: column;
         align-items: end;
         justify-content: space-between;
-        padding: 10px 0;
+        column-gap: 5px;
+        padding-bottom: 10px;
         border-bottom: 1px solid var(--Card-separator);
 
         &__title {
@@ -31,18 +48,24 @@
 
           p {
             color: var(--Personal-colors-black);
-            font-size: 16px;
+            font-size: 18px;
             font-style: normal;
             font-weight: 600;
             line-height: 0.75;
           }
 
           span {
-            color: var(--Personal-colors-black);
+            color: #a8a4a4;
             font-size: 12px;
             font-style: normal;
             font-weight: 500;
             line-height: 0.75;
+          }
+
+          @media (max-width: 992px) {
+            p {
+              font-size: 14px;
+            }
           }
         }
 
@@ -81,28 +104,59 @@
 
     &__info {
       display: grid;
-      grid-template: 1.2fr 1fr / 1fr;
-      row-gap: 20px;
+      grid-template: repeat(2, 1fr) / 1fr;
       padding: 0 20px;
       border-right: 1px solid var(--Card-separator);
 
+      @media (max-width: 992px) {
+        grid-template: 1fr / repeat(2, 1fr);
+        padding: 0 15px;
+      }
+
+      @media (max-width: 768px) {
+        grid-template: repeat(2, 1fr) / 1fr;
+        row-gap: 15px;
+        border-right: none;
+      }
+
       &__data {
         display: grid;
-        grid-template: 1fr / 3fr 4fr 2fr;
+        grid-template: 1fr / repeat(3, 1fr);
         border-bottom: 1px solid var(--Card-separator);
+        column-gap: 10px;
+        padding-bottom: 20px;
+
+        @media (max-width: 992px) {
+          grid-template: repeat(3, 1fr) / 1fr;
+          row-gap: 5px;
+          padding-bottom: 0;
+          border-bottom: none;
+          border-right: 1px solid var(--Card-separator);
+          padding-right: 15px;
+        }
+
+        @media (max-width: 768px) {
+          padding-right: 0;
+          border-right: none;
+        }
 
         div {
           display: grid;
-          grid-auto-flow: column;
-          column-gap: 10px;
-          justify-content: start;
+          grid-auto-flow: row;
+          row-gap: 10px;
+          border-radius: 12px;
+          background: #f5f5f6;
           align-items: center;
+          justify-content: center;
+          justify-items: center;
+          align-content: center;
+          padding: 0px 10px;
 
           p {
-            color: var(--Personal-colors-black);
+            color: rgba(0, 0, 0, 0.45);
             font-size: 14px;
             font-style: normal;
-            font-weight: 400;
+            font-weight: 500;
             line-height: 0.75;
           }
 
@@ -127,22 +181,35 @@
               line-height: 0.75;
             }
           }
+
+          @media (max-width: 992px) {
+            justify-content: start;
+            justify-items: start;
+            p,
+            span {
+              font-size: 12px;
+            }
+          }
         }
       }
 
       &__icons {
         display: grid;
-        grid-template: 1fr / 1fr 1fr 1fr 1fr 1fr;
+        grid-template: 1fr / repeat(5, 1fr);
         column-gap: 20px;
+        padding-top: 20px;
 
         div {
           display: grid;
           grid-auto-flow: column;
           align-items: center;
+          justify-content: center;
           column-gap: 10px;
-          padding: 10px 20px;
-          border-radius: 8px;
-          box-shadow: 0px 2px 10px 1px rgba(0, 0, 0, 0.2);
+          padding: 10px 5px;
+          border-radius: 10px;
+          border: 0.2px solid rgba(0, 0, 0, 0.1);
+          background: #fff;
+          box-shadow: 0px 1px 8px 0px rgba(0, 0, 0, 0.1);
 
           p {
             color: var(--Personal-colors-black);
@@ -151,6 +218,36 @@
             font-weight: 500;
             line-height: normal;
           }
+        }
+
+        @media (max-width: 992px) {
+          padding-top: 0;
+          padding-left: 15px;
+          grid-template: repeat(3, 1fr) / repeat(2, 1fr);
+          grid-gap: 5px;
+
+          .item {
+            &__full {
+              grid-column: 1 / -1;
+            }
+
+            &__left {
+              grid-column: 1;
+            }
+
+            &__right {
+              grid-column: 2;
+            }
+          }
+
+          svg {
+            width: 26px;
+            height: 26px;
+          }
+        }
+
+        @media (max-width: 768px) {
+          padding-left: 0;
         }
       }
 
@@ -185,8 +282,8 @@
     display: grid;
     grid-auto-flow: row;
     align-items: center;
-    row-gap: 10px;
-    padding: 10px;
+    // row-gap: 10px;
+    // padding: 10px;
   }
 }
 
