--- a/src/features/channel/channelCardMenu/UI/styles.module.scss
+++ b/src/features/channel/channelCardMenu/UI/styles.module.scss
@@ -2,7 +2,6 @@
 }
 
 .menu {
-  // padding-top: 20px;
   right: 5px;
   top: 5px;
   display: grid;
@@ -12,7 +11,7 @@
   box-shadow: 0px 2px 10px 1px rgba(0, 0, 0, 0.2);
   z-index: 1;
   min-width: 200px;
-  border-radius: 7px;
+  border-radius: 12px;
   overflow: hidden;
 
   .top {
@@ -22,6 +21,14 @@
     column-gap: 10px;
     align-items: center;
     justify-content: space-between;
+    width: 100%;
+
+    > p {
+      line-height: 1.2;
+      font-weight: 500;
+      font-size: 12px;
+      color: #909090;
+    }
 
     button {
       display: grid;
@@ -34,7 +41,7 @@
     }
   }
 
-  p {
+  > p {
     color: var(--Personal-colors-main);
     text-align: center;
     font-size: 14px;
