--- a/src/features/channel/repeatModeration/UI/styles.module.scss
+++ b/src/features/channel/repeatModeration/UI/styles.module.scss
@@ -4,4 +4,18 @@
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+
+  > div {
+    width: 20px;
+    display: none;
+
+    @media (max-width: 576px) {
+      display: block;
+    }
+
+    > svg {
+      width: 100%;
+      height: auto;
+    }
+  }
 }
