--- a/src/features/channel/seeOffers/UI/styles.module.scss
+++ b/src/features/channel/seeOffers/UI/styles.module.scss
@@ -4,4 +4,13 @@
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+
+  div {
+    width: 20px;
+
+    svg {
+      width: 100%;
+      height: auto;
+    }
+  }
 }
