--- a/src/features/channel/zeroChannel/UI/styles.module.scss
+++ b/src/features/channel/zeroChannel/UI/styles.module.scss
@@ -1,8 +1,9 @@
 .wrapper {
   display: grid;
   grid-auto-flow: row;
-  row-gap: 60px;
+  row-gap: 40px;
   justify-content: center;
+  justify-items: center;
   align-items: center;
   margin-top: 80px;
   margin-bottom: 170px;
@@ -22,32 +23,36 @@
     }
 
     p {
-      font-size: 22px;
-      font-style: normal;
-      font-weight: 400;
-      line-height: normal;
-      max-width: 510px;
+      font-size: var(--column-gap-option-item-xl);
+      color: #909090;
+
+      @media (max-width: 992px) {
+        font-size: var(--column-gap-option-item-lg);
+      }
+
+      @media (max-width: 768px) {
+        font-size: var(--column-gap-option-item-md);
+      }
+
+      @media (max-width: 576px) {
+        font-size: var(--column-gap-option-item-sm);
+      }
+
+      @media (max-width: 375px) {
+        font-size: var(--column-gap-option-item-xs);
+      }
     }
 
     svg {
-      width: 185px;
-      height: 185px;
-    }
-  }
+      max-width: 200px;
+      max-height: 200px;
+      width: 15vw;
+      height: 15vw;
 
-  .buttons {
-    display: grid;
-    grid-auto-flow: column;
-    justify-content: center;
-    align-items: center;
-    column-gap: 25px;
-    width: 100%;
-
-    p {
-      font-size: 14px;
-      font-style: normal;
-      font-weight: 500;
-      line-height: normal;
+      @media (max-width: 576px) {
+        width: 25vw;
+        height: 25vw;
+      }
     }
   }
 }
