--- a/src/features/other/seeReason/UI/styles.module.scss
+++ b/src/features/other/seeReason/UI/styles.module.scss
@@ -5,3 +5,64 @@
   font-weight: 500;
   line-height: normal;
 }
+
+.alert {
+  padding: 20px;
+
+  &__title {
+    display: grid;
+    grid-auto-flow: column;
+    gap: 10px;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 10px;
+
+    p {
+      font-size: 20px;
+
+      @media (max-width: 768px) {
+        font-size: 14px;
+      }
+    }
+
+    div {
+      width: 24px;
+      height: 24px;
+
+      svg {
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
+
+  &__description {
+    font-size: 16px;
+    color: #909090;
+
+    @media (max-width: 768px) {
+      font-size: 12px;
+    }
+  }
+
+  &__btn {
+    border-radius: 12px;
+    box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.15);
+    font-size: var(--font-size-option-item-xl);
+    font-weight: 500;
+    color: var(--Personal-colors-main);
+    transition: all 300ms ease;
+    padding: 12px 10px;
+
+    @media (max-width: 576px) {
+      font-size: 14px;
+    }
+
+    &:hover {
+      background: var(--Gradients-Gradient-1);
+      color: #fff;
+      transform: scale(1.015);
+      transition: all 300ms ease;
+    }
+  }
+}
