--- a/src/widgets/channel/myChannels/activeChannels/card/UI/styles.module.scss
+++ b/src/widgets/channel/myChannels/activeChannels/card/UI/styles.module.scss
@@ -1,14 +1,84 @@
 .wrapper {
   display: grid;
   grid-auto-flow: row;
-  row-gap: 20px;
   padding-top: 20px;
   width: 100%;
   position: relative;
 
+  @media (max-width: 992px) {
+    padding-top: 30px;
+    position: relative;
+  }
+
   .card {
     display: grid;
-    grid-template: 1fr / 1fr 3fr 4fr 0.4fr;
+    grid-template: 1fr / 4fr 4fr 0.4fr;
+    border-bottom: 1px solid #ddd;
+    padding-bottom: 15px;
+
+    @media (max-width: 992px) {
+      grid-template: 1fr / 2.5fr 4fr;
+    }
+
+    @media (max-width: 576px) {
+      grid-template: none;
+      grid-auto-flow: row;
+      row-gap: 10px;
+      border-bottom: none;
+      padding-bottom: 0px;
+    }
+
+    &__base {
+      display: grid;
+      grid-auto-flow: column;
+
+      @media (max-width: 992px) {
+        grid-template-columns: 0.3fr 1fr;
+        grid-template-rows: auto auto;
+        grid-auto-flow: row;
+        column-gap: 10px;
+        row-gap: 10px;
+        padding-right: 15px;
+      }
+
+      @media (max-width: 576px) {
+        grid-template-columns: 0.1fr 1fr;
+        row-gap: 10px;
+        padding-right: 0;
+      }
+
+      .status_lg {
+        display: none;
+
+        @media (max-width: 992px) {
+          display: block;
+          padding-top: 10px;
+          grid-column: 1 / 3;
+          border-top: 1px solid var(--Card-separator);
+          margin-left: 15px;
+
+          @media (max-width: 576px) {
+            margin-right: 15px;
+          }
+
+          > p {
+            display: grid;
+            align-items: center;
+            justify-content: center;
+            border-radius: 8px;
+            height: 100%;
+            background: rgba(15, 105, 201, 0.1);
+            padding: 12px 0px;
+
+            @media (max-width: 576px) {
+              padding: 10px;
+              padding-top: 10px;
+              font-weight: 500;
+            }
+          }
+        }
+      }
+    }
 
     &__logo {
       display: grid;
@@ -16,6 +86,16 @@
       justify-items: center;
       border-right: 1px solid var(--Card-separator);
       padding: 0 20px;
+
+      @media (max-width: 992px) {
+        padding: 0;
+        padding-left: 15px;
+        border: none;
+
+        svg {
+          display: none;
+        }
+      }
 
       .logo {
         display: grid;
@@ -40,7 +120,7 @@
           }
         }
 
-        svg {
+        > svg {
           max-width: 80px;
         }
       }
@@ -49,8 +129,12 @@
     &__description {
       display: grid;
       grid-auto-flow: row;
-      border-right: 1px solid var(--Card-separator);
       padding: 0 20px;
+
+      @media (max-width: 992px) {
+        padding: 0;
+        border: none;
+      }
 
       &__top {
         display: grid;
@@ -59,28 +143,56 @@
         align-items: end;
         border-bottom: 1px solid var(--Card-separator);
         margin-bottom: 20px;
+        gap: 10px;
+
+        @media (max-width: 992px) {
+          grid-auto-flow: row;
+          gap: 5px;
+          border-bottom: none;
+          margin-bottom: 0px;
+          padding-bottom: 0px;
+          align-content: center;
+          align-items: center;
+        }
+
+        @media (max-width: 576px) {
+          grid-template: 1fr / 1fr auto;
+          gap: 10px;
+          padding-right: 15px;
+        }
 
         &__text {
           display: grid;
           grid-auto-flow: row;
           row-gap: 10px;
+          line-height: 1;
 
-          p {
-            color: car(--Personal-colors-black);
-            font-size: 16px;
-            font-style: normal;
-            font-weight: 600;
-            line-height: 0.75;
+          @media (max-width: 992px) {
+            font-size: var(--font-size-option-item-md);
+            row-gap: 5px;
           }
 
-          span {
+          @media (max-width: 576px) {
+            row-gap: 10px;
+          }
+
+          > p {
+            color: car(--Personal-colors-black);
+            font-size: var(--font-size-option-item-xl);
+            font-weight: 600;
+          }
+
+          > span {
             color: rgba(0, 0, 0, 0.6);
             font-size: 12px;
-            font-style: normal;
             font-weight: 500;
+
+            @media (max-width: 576px) {
+              font-size: 14px;
+            }
           }
 
-          div {
+          > div {
             display: grid;
             grid-auto-flow: column;
             column-gap: 10px;
@@ -90,16 +202,29 @@
         &__icons {
           display: grid;
 
-          div {
+          > div {
             display: grid;
             grid-auto-flow: column;
             column-gap: 10px;
             justify-content: end;
 
-            svg {
+            > svg {
               width: auto;
               height: 30px;
+
+              @media (max-width: 992px) {
+                height: 20px;
+              }
             }
+
+            @media (max-width: 992px) {
+              justify-content: start;
+            }
+          }
+
+          p {
+            font-size: 12px;
+            font-weight: 500;
           }
         }
       }
@@ -112,10 +237,13 @@
         background: rgba(15, 105, 201, 0.1);
         padding: 26px 0;
 
-        p {
+        @media (max-width: 992px) {
+          display: none;
+        }
+
+        > p {
           color: var(--Personal-colors-black);
-          font-size: 24px;
-          font-style: normal;
+          font-size: 16px;
           font-weight: 500;
           line-height: 0.75;
         }
@@ -126,37 +254,93 @@
       display: grid;
       grid-template: 1fr 0.5fr / 1fr;
       border-right: 1px solid var(--Card-separator);
+      border-left: 1px solid var(--Card-separator);
       padding: 0 20px;
+
+      @media (max-width: 992px) {
+        padding: 0 15px;
+        border-right: none;
+      }
+
+      @media (max-width: 576px) {
+        border-bottom: 1px solid var(--Card-separator);
+        padding: 0px;
+        padding-bottom: 15px;
+        margin: 0px 15px;
+        grid-template: none;
+        grid-auto-flow: row;
+        border-left: none;
+      }
 
       &__top {
         display: grid;
         grid-auto-flow: row;
-        padding-bottom: 10px;
+        padding-bottom: 20px;
         border-bottom: 1px solid var(--Card-separator);
         margin-bottom: 20px;
         align-items: center;
         align-content: center;
         text-align: center;
+        justify-items: center;
 
-        span {
+        @media (max-width: 768px) {
+          padding-bottom: 15px;
+          margin-bottom: 15px;
+        }
+
+        @media (max-width: 576px) {
+          padding-bottom: 10px;
+          margin-bottom: 10px;
+        }
+
+        > span {
           color: var(--Personal-colors-black);
           font-size: 14px;
-          font-style: normal;
           font-weight: 500;
-          line-height: normal;
+
+          @media (max-width: 576px) {
+            max-width: 80%;
+          }
         }
       }
 
       &__offers {
         display: grid;
-        grid-template: 1fr / 1fr 2fr;
+        grid-template: 1fr / 0.7fr 1fr;
+        gap: 20px;
         align-items: center;
         justify-content: space-between;
-        padding-bottom: 10px;
+        padding-bottom: 20px;
         border-bottom: 1px solid var(--Card-separator);
         margin-bottom: 20px;
 
-        p {
+        @media (max-width: 768px) {
+          padding-bottom: 15px;
+          margin-bottom: 15px;
+        }
+
+        @media (max-width: 576px) {
+          grid-template: 1fr / 1fr 1fr;
+        }
+
+        .wait_block {
+          width: 100%;
+          height: 100%;
+          background: rgba(221, 221, 221, 0.25);
+          color: #000;
+          font-weight: 500;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          border-radius: 12px;
+          font-size: 16px;
+
+          @media (max-width: 576px) {
+            font-size: 14px;
+          }
+        }
+
+        > p {
           color: var(--Personal-colors-black);
           font-size: 20px;
           font-style: normal;
@@ -175,26 +359,68 @@
 
       &__bottom {
         display: grid;
-        grid-template: 1fr/ 1fr 1fr 1fr 1fr;
+        grid-auto-flow: column;
         column-gap: 20px;
-        // grid-auto-flow: column;
-        align-items: center;
-        justify-content: space-between;
         color: var(--Personal-colors-black);
         font-size: 14px;
-        font-style: normal;
         font-weight: 500;
-        line-height: normal;
 
-        div {
+        @media (max-width: 768px) {
+          font-size: 14px;
+        }
+
+        @media (max-width: 375px) {
+          column-gap: 10px;
+        }
+
+        > div {
           display: grid;
           grid-auto-flow: column;
           align-items: center;
+          justify-content: center;
           column-gap: 10px;
-
           padding: 8px 20px;
           border-radius: 8px;
-          box-shadow: 0px 2px 10px 1px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.15);
+
+          @media (max-width: 768px) {
+            padding: 6px 10px;
+          }
+
+          @media (max-width: 375px) {
+            column-gap: 5px;
+          }
+
+          > figure {
+            width: 24px;
+            height: 24px;
+
+            @media (max-width: 375px) {
+              width: 18px;
+              height: 18px;
+            }
+
+            > svg {
+              width: 100%;
+              height: 100%;
+            }
+          }
+
+          > p {
+            font-size: var(--font-size-option-item-xl);
+
+            @media (max-width: 992px) {
+              font-size: var(--font-size-option-item-lg);
+            }
+
+            @media (max-width: 768px) {
+              font-size: var(--font-size-option-item-md);
+            }
+
+            @media (max-width: 375px) {
+              font-size: var(--font-size-option-item-xs);
+            }
+          }
         }
       }
 
@@ -204,6 +430,21 @@
         column-gap: 20px;
         align-items: center;
         justify-content: space-between;
+
+        @media (max-width: 576px) {
+          grid-template: 1fr 1fr / 1fr;
+          row-gap: 10px;
+          justify-content: center;
+          padding: 0px 20px;
+        }
+
+        > button {
+          font-size: 12px;
+
+          @media (max-width: 576px) {
+            justify-content: center;
+          }
+        }
       }
     }
 
@@ -213,8 +454,19 @@
       grid-auto-flow: row;
       justify-content: space-between;
 
-      svg {
+      @media (max-width: 992px) {
+        position: absolute;
+        right: 15px;
+        top: 3px;
+        padding: 0;
+      }
+
+      > div {
         width: 30px;
+
+        > svg {
+          width: 100%;
+        }
       }
     }
   }
@@ -242,23 +494,69 @@
     display: grid;
     grid-template: 1fr / 1fr 1fr 1fr;
     column-gap: 20px;
-    padding: 20px;
+    padding: 15px;
 
-    > button {
+    @media (max-width: 576px) {
+      grid-template: 1fr 1fr 1fr / 1fr;
+      row-gap: 10px;
+      padding: 15px 30px;
+    }
+
+    button,
+    .edit {
       border-radius: 12px;
-      box-shadow: 0px 2px 10px 1px rgba(0, 0, 0, 0.2);
+      box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.15);
       font-size: var(--font-size-option-item-xl);
       font-weight: 500;
-      text-transform: uppercase;
       color: var(--Personal-colors-main);
       transition: all 300ms ease;
       padding: 12px 10px;
+
+      display: grid;
+      grid-auto-flow: column;
+      gap: 5px;
+      justify-content: center;
+      align-items: center;
+
+      @media (max-width: 576px) {
+        font-size: 14px;
+      }
 
       &:hover {
         background: var(--Gradients-Gradient-1);
         color: #fff;
         transform: scale(1.015);
         transition: all 300ms ease;
+      }
+
+      div {
+        width: 24px;
+        height: 24px;
+
+        @media (max-width: 576px) {
+          width: 20px;
+          height: 20px;
+        }
+      }
+
+      svg {
+        width: 100%;
+        height: 100%;
+      }
+    }
+
+    &.inactive {
+      pointer-events: none;
+
+      > button {
+        box-shadow: none;
+        background: rgba(196, 196, 196, 0.6);
+        color: #fff;
+      }
+      > a {
+        box-shadow: none;
+        background: rgba(196, 196, 196, 0.6);
+        color: #fff;
       }
     }
   }
