--- a/src/widgets/channel/myChannels/activeChannels/ui/styles.module.scss
+++ b/src/widgets/channel/myChannels/activeChannels/ui/styles.module.scss
@@ -4,7 +4,11 @@
   .cards {
     display: grid;
     grid-auto-flow: row;
-    row-gap: 10px;
+    row-gap: 20px;
+
+    @media (max-width: 768px) {
+      row-gap: 10px;
+    }
 
     .show_more {
       margin: 10px auto;
