--- a/src/features/order/rejectPost/UI/styles.module.scss
+++ b/src/features/order/rejectPost/UI/styles.module.scss
@@ -6,6 +6,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 14px;
 
   color: var(--Personal-colors-main);
   border-radius: 8px;
