--- a/src/features/other/barStatusFilter/UI/styles.module.scss
+++ b/src/features/other/barStatusFilter/UI/styles.module.scss
@@ -5,14 +5,14 @@
     column-gap: 25px;
     align-items: center;
     justify-content: start;
-    font-size: 12px;
+  }
+
+  li {
+    font-size: 14px;
     font-style: normal;
     font-weight: 500;
     line-height: 0.75;
     color: var(--Personal-colors-black);
-  }
-
-  li {
     text-align: center;
     padding: 10px;
     min-width: 100px;
@@ -23,6 +23,10 @@
       border-radius: 12px;
       background: var(--Gradients-Gradient-1);
       color: var(--Personal-colors-White);
+    }
+
+    @media (max-width: 768px) {
+      font-size: 12px;
     }
   }
 }
