--- a/src/features/project/zeroProject/UI/styles.module.scss
+++ b/src/features/project/zeroProject/UI/styles.module.scss
@@ -37,11 +37,12 @@
   }
 
   p {
-    font-size: 22px;
+    max-width: 550px;
+    color: rgba(0, 0, 0, 0.45);
+    font-size: 24px;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 500;
     line-height: normal;
-    max-width: 510px;
   }
 
   svg {
