--- a/src/widgets/communication/chat/styles.module.scss
+++ b/src/widgets/communication/chat/styles.module.scss
@@ -1,3 +1,13 @@
+.chat {
+  display: grid;
+  grid-auto-flow: column;
+  justify-content: center;
+  align-items: center;
+  column-gap: 10px;
+  width: 100%;
+  height: 100%;
+}
+
 .content {
   display: grid;
   align-items: start;
