--- a/src/entities/project/ui/templatecard/UI/styles.module.scss
+++ b/src/entities/project/ui/templatecard/UI/styles.module.scss
@@ -1,24 +1,24 @@
 .card {
   display: grid;
-
-  grid-template: 1fr / 4.5fr 8fr 4.5fr 1fr;
+  grid-template: 1fr / 4fr 4fr 4fr 4fr 1fr;
   padding: 10px 15px;
   height: 80px;
-  grid-template-areas: "item1 item2 item3 item4";
+  grid-template-areas: "item1 item2 item3 item4 item5";
 
   @media (max-width: 992px) {
-    grid-template: 1.5fr 1fr / 1fr 1fr 1fr;
+    grid-template: 1.5fr 1fr / 3fr 3fr 3fr 1fr;
     row-gap: 15px;
     height: 140px;
     grid-template-areas:
-      "item1 item2 item3 "
-      "item4 item4 item4";
+      "item1 item2 item3 item5"
+      "item4 item4 item4 item4";
   }
 
   @media (max-width: 768px) {
     padding: 15px;
     height: 315px;
-    grid-template: min-content 1fr 1fr 1.5fr 1fr/ 1fr;
+    height: unset;
+    grid-template: unset;
     grid-template-areas:
       "item5"
       "item1"
@@ -37,6 +37,17 @@
     align-content: center;
     grid-area: item1;
 
+    @media (max-width: 992px) {
+      padding-right: 15px;
+    }
+
+    @media (max-width: 768px) {
+      border-right: none;
+      border-bottom: 1px solid var(--Card-separator);
+      padding-bottom: 15px;
+      padding-right: 0;
+    }
+
     p {
       font-size: 18px;
       font-style: normal;
@@ -48,6 +59,7 @@
     div {
       display: grid;
       grid-auto-flow: column;
+      column-gap: 10px;
       align-items: center;
       justify-content: space-between;
       white-space: nowrap;
@@ -60,28 +72,23 @@
         line-height: 1;
       }
     }
-
-    @media (max-width: 992px) {
-      padding-right: 15px;
-    }
-    @media (max-width: 768px) {
-      border-right: none;
-      border-bottom: 1px solid var(--Card-separator);
-      padding-bottom: 15px;
-      padding-right: 0;
-    }
   }
 
   &__info {
-    grid-area: item2;
     display: grid;
-    grid-template: 1fr / repeat(2, 1fr);
+    grid-template: repeat(2, 1fr) / 1fr;
+    color: var(--Personal-colors-black);
+    border-right: 1px solid var(--Card-separator);
+    padding: 0 20px;
+    grid-area: item2;
 
     @media (max-width: 992px) {
-      grid-template: repeat(2, 1fr) / 1fr;
+      padding: 0 15px;
     }
 
     @media (max-width: 768px) {
+      border-right: none;
+      padding: 0;
       row-gap: 5px;
     }
 
@@ -89,33 +96,24 @@
       display: grid;
       grid-auto-flow: column;
       column-gap: 10px;
-      align-items: center;
-      text-align: center;
       justify-content: space-between;
-      border-right: 1px solid var(--Card-separator);
-      padding: 0 20px;
+      align-content: center;
 
       p {
-        color: rgba(0, 0, 0, 0.45);
         font-size: 12px;
         font-style: normal;
-        font-weight: 500;
-        line-height: 1;
+        font-weight: 600;
+        line-height: normal;
       }
       span {
-        color: #000;
         font-size: 12px;
         font-style: normal;
-        font-weight: 500;
-        line-height: 1;
-      }
-
-      @media (max-width: 992px) {
-        padding: 0 15px;
+        line-height: normal;
+        font-weight: 400;
+        white-space: nowrap;
       }
 
       @media (max-width: 768px) {
-        border-right: none;
         border-radius: 10px;
         background: #f5f5f6;
         padding: 10px;
@@ -139,13 +137,13 @@
     }
   }
 
-  &__status {
+  &__template {
     display: grid;
     padding: 0 20px;
-
+    grid-area: item3;
     @media (max-width: 992px) {
-      padding-left: 15px;
       padding-right: 0;
+      padding-left: 15px;
     }
 
     @media (max-width: 768px) {
@@ -165,43 +163,31 @@
 
       p {
         color: rgba(0, 0, 0, 0.7);
-        font-size: 18px;
+        font-size: 16px;
         font-style: normal;
         font-weight: 500;
         line-height: 1;
-        white-space: nowrap;
       }
     }
-    grid-area: item3;
   }
 
-  &__chat {
+  &__continue {
     display: grid;
     grid-area: item4;
-    border-radius: 15px;
-    background: var(
-      --Gradients-Gradient-1,
-      linear-gradient(45deg, #4772e6 23.91%, #8e54e9 75.06%)
-    );
-    box-shadow: 0px 3px 6px 0px rgba(43, 90, 212, 0.42);
-
-    p {
-      color: var(--Personal-colors-White);
-      font-size: 14px;
-      font-style: normal;
-      font-weight: 500;
-      line-height: 1;
+    button {
+      height: 100%;
+      border-radius: 15px;
     }
   }
 
   &__more {
-    display: none;
+    display: grid;
+    align-items: center;
+    align-content: center;
+    justify-content: center;
+    grid-area: item5;
 
     @media (max-width: 768px) {
-      grid-area: item5;
-      display: grid;
-      align-items: center;
-      align-content: center;
       justify-content: flex-end;
     }
   }
