feat: add Channel Page Adaptive

--- a/src/entities/channel/ui/information/description/UI/styles.module.scss
+++ b/src/entities/channel/ui/information/description/UI/styles.module.scss
@@ -6,7 +6,19 @@
   border-radius: 20px;
   background: var(--Personal-colors-White);
   box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.16);
-  height: 300px;
+  // height: 230px;
+
+  @media (max-width: 992px) {
+    padding: 15px 25px;
+  }
+
+  @media (max-width: 768px) {
+    height: unset;
+    row-gap: 20px;
+    grid-auto-flow: row;
+    grid-template: unset;
+    padding: 10px;
+  }
 
   .channel__logo__wrapper {
     display: grid;
@@ -25,6 +37,7 @@
         border-radius: 12px;
         border: 1px solid var(--black-20);
         background: var(--Personal-colors-White);
+        justify-content: center;
 
         p {
           color: var(--black-20);
@@ -65,31 +78,55 @@
 
   .channel__description {
     display: grid;
-    grid-auto-flow: row;
+    grid-template: repeat(3, min-content) / 1fr min-content;
     row-gap: 25px;
+    column-gap: 10px;
+    grid-template-areas:
+      "item1 item2"
+      "item3 item3"
+      "item4 item4";
+
+    @media (max-width: 768px) {
+      grid-auto-flow: row;
+      grid-template: unset;
+      row-gap: 15px;
+      justify-items: flex-start;
+      grid-template-areas:
+        "item1"
+        "item3"
+        "item2"
+        "item4";
+    }
 
     .title {
       display: grid;
       grid-auto-flow: column;
       justify-content: space-between;
+      grid-area: item1;
 
       p {
-        font-size: 32px;
+        font-size: 28px;
         font-style: normal;
         font-weight: 600;
         line-height: 1;
         color: var(--Personal-colors-main);
-      }
-      div {
-        display: grid;
-        grid-auto-flow: column;
-        align-items: center;
-        column-gap: 10px;
-
-        svg {
-          height: 24px;
-          width: auto;
+        @media (max-width: 992px) {
+          font-size: 24px;
         }
+      }
+    }
+
+    .icons {
+      display: grid;
+      grid-auto-flow: column;
+      align-items: center;
+      column-gap: 10px;
+      grid-area: item2;
+
+      svg {
+        height: 24px;
+        width: 24px;
+        max-width: 24px;
       }
     }
 
@@ -99,6 +136,7 @@
       font-style: normal;
       font-weight: 500;
       line-height: 1;
+      grid-area: item3;
     }
 
     .link {
@@ -107,6 +145,7 @@
       column-gap: 10px;
       align-items: center;
       justify-content: start;
+      grid-area: item4;
 
       svg {
         height: 24px;
