--- a/src/entities/channel/ui/information/parameters/skeleton/styles.module.scss
+++ b/src/entities/channel/ui/information/parameters/skeleton/styles.module.scss
@@ -13,5 +13,13 @@
     height: 60px;
     box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.16);
     align-items: center;
+
+    @media (max-width: 576px) {
+      grid-template: unset;
+      grid-auto-flow: row;
+      row-gap: 10px;
+      padding: 15px 20px;
+      height: unset;
+    }
   }
 }
