--- a/src/entities/channel/ui/information/rate/skeleton/styles.module.scss
+++ b/src/entities/channel/ui/information/rate/skeleton/styles.module.scss
@@ -5,14 +5,19 @@
 
   .title {
     color: var(--Personal-colors-black);
-    font-size: 28px;
+    font-size: 24px;
     font-style: normal;
     font-weight: 600;
     line-height: 1;
+
+    @media (max-width: 576px) {
+      font-size: 20px;
+      text-align: center;
+    }
   }
 
   .card {
-    height: 160px;
+    // height: 160px;
     display: grid;
     grid-template: 1fr / max-content 1fr;
     column-gap: 80px;
@@ -20,6 +25,17 @@
     padding: 30px;
     border-radius: 12px;
     box-shadow: 0px 4px 12px 0px rgba(0, 0, 0, 0.16);
+
+    @media (max-width: 768px) {
+      column-gap: 15px;
+    }
+
+    @media (max-width: 576px) {
+      grid-template: unset;
+      grid-auto-flow: row;
+      row-gap: 20px;
+      padding: 15px 25px;
+    }
 
     .left {
       display: grid;
@@ -29,6 +45,7 @@
         display: grid;
         grid-auto-flow: column;
         column-gap: 10px;
+        justify-content: center;
 
         p {
           color: var(--Personal-colors-black);
