--- a/src/entities/channel/ui/information/statistics/skeleton/styles.module.scss
+++ b/src/entities/channel/ui/information/statistics/skeleton/styles.module.scss
@@ -5,21 +5,32 @@
 
   .title {
     color: var(--Personal-colors-black);
-    font-size: 28px;
+    font-size: 24px;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
+
+    @media (max-width: 576px) {
+      font-size: 20px;
+      text-align: center;
+    }
   }
 
   .block__wrapper {
     display: grid;
-    grid-template: 1fr / 1fr 1fr;
+    grid-template: 1fr / repeat(2, 1fr);
     column-gap: 15px;
     height: 260px;
 
+    @media (max-width: 576px) {
+      height: unset;
+      grid-template: repeat(2, 1fr) / 1fr;
+      row-gap: 15px;
+    }
+
     .main {
       display: grid;
-      grid-template: 1fr 1fr / 1fr;
+      grid-template: repeat(2, 1fr) / 1fr;
       row-gap: 15px;
 
       .block {
@@ -37,7 +48,7 @@
 
     .channel {
       display: grid;
-      grid-template: 1fr / 1fr 1fr;
+      grid-template: 1fr / repeat(2, 1fr);
       column-gap: 20px;
       padding: 10px;
       border-radius: 12px;
@@ -46,7 +57,7 @@
 
       .column {
         display: grid;
-        grid-template: 1fr 1fr / 1fr;
+        grid-template: repeat(2, 1fr) / 1fr;
         row-gap: 15px;
 
         .row {
