--- a/src/features/channel/recommendCard/UI/styles.module.scss
+++ b/src/features/channel/recommendCard/UI/styles.module.scss
@@ -24,7 +24,7 @@
 
     &__top {
       display: grid;
-      grid-template: 1fr / 1fr 3fr 2fr;
+      grid-template: 1fr / max-content 1fr min-content;
       column-gap: 20px;
 
       .logo {
