--- a/src/widgets/channel/channelInfo/UI/addToCart/UI/styles.module.scss
+++ b/src/widgets/channel/channelInfo/UI/addToCart/UI/styles.module.scss
@@ -1,17 +1,38 @@
 .wrapper {
-  // sticky
   position: sticky;
   top: 100px;
   right: 0;
 
   display: grid;
   grid-auto-flow: row;
-  row-gap: 25px;
-  padding: 25px 20px;
-  height: 300px;
+  row-gap: 20px;
+  padding: 15px;
   border-radius: 20px;
   background: #fff;
   box-shadow: 0px 4px 16px 0px var(--Personal-colors-main);
+  min-height: 260px;
+
+  grid-template-areas:
+    "item1"
+    "item2"
+    "item3"
+    "item4";
+
+  @media (max-width: 992px) {
+    min-height: 190px;
+    grid-template-areas:
+      "item1 item1"
+      "item2 item3"
+      "item4 item4";
+  }
+
+  @media (max-width: 576px) {
+    grid-template-areas:
+      "item1"
+      "item2"
+      "item3"
+      "item4";
+  }
 
   .title {
     color: var(--Personal-colors-black);
@@ -20,12 +41,14 @@
     font-style: normal;
     font-weight: 500;
     line-height: 1;
+    grid-area: item1;
   }
 
   .format {
     display: grid;
     grid-auto-flow: row;
     row-gap: 10px;
+    grid-area: item2;
 
     p {
       color: var(--black-70, #4d4d4d);
@@ -45,6 +68,7 @@
     display: grid;
     grid-auto-flow: row;
     row-gap: 15px;
+    grid-area: item3;
 
     p {
       color: var(--black-70, #4d4d4d);
@@ -67,6 +91,7 @@
 
   .button {
     padding: 12px;
+    grid-area: item4;
     p {
       color: var(--Personal-colors-White);
       font-size: 18px;
