--- a/src/widgets/channel/channelInfo/UI/styles.module.scss
+++ b/src/widgets/channel/channelInfo/UI/styles.module.scss
@@ -32,13 +32,40 @@
   .top {
     display: grid;
     grid-template: 1fr / 1fr 0.5fr;
-    justify-content: space-between;
-    column-gap: 30px;
+    column-gap: 20px;
 
     @media (max-width: 992px) {
       grid-template: none;
       grid-auto-flow: row;
       row-gap: 15px;
+    }
+
+    .info__wrapper {
+      display: grid;
+      grid-auto-flow: row;
+      row-gap: var(--row-gap-content-xl);
+
+      @media (max-width: 992px) {
+        row-gap: var(--row-gap-content-lg);
+      }
+
+      @media (max-width: 768px) {
+        row-gap: var(--row-gap-content-md);
+      }
+
+      @media (max-width: 576px) {
+        row-gap: var(--row-gap-content-sm);
+      }
+
+      @media (max-width: 375px) {
+        row-gap: var(--row-gap-content-xs);
+      }
+
+      .info {
+        display: grid;
+        grid-auto-flow: row;
+        row-gap: 20px;
+      }
     }
   }
 }
