--- a/src/widgets/channel/myChannels/activeChannels/card/skeleton/styles.module.scss
+++ b/src/widgets/channel/myChannels/activeChannels/card/skeleton/styles.module.scss
@@ -1,74 +1,187 @@
 .wrapper {
   display: grid;
-  grid-template: 5fr 1fr / 1fr;
-  row-gap: 20px;
-  min-height: 210px;
+
+  &.isActive {
+    grid-template: 2fr 1fr / 1fr;
+    row-gap: 15px;
+    min-height: 250px;
+
+    @media (max-width: 992px) {
+      height: 275px;
+    }
+
+    @media (max-width: 576px) {
+      grid-template: 1.6fr 1fr / 1fr;
+      height: 480px;
+    }
+  }
+
+  &.isNotActive {
+    min-height: 165px;
+    padding-bottom: 15px;
+
+    @media (max-width: 992px) {
+      height: 195px;
+    }
+
+    @media (max-width: 576px) {
+      height: 355px;
+
+      .card {
+        grid-template: 1fr 1.1fr / 1fr;
+      }
+      .card__info {
+        grid-template: min-content 1fr / 1fr;
+        row-gap: 20px;
+        margin: 0 20px;
+      }
+
+      .card__left {
+        grid-template-rows: min-content 0.8fr;
+      }
+    }
+  }
 
   .card {
     display: grid;
-    grid-template: 1fr / 1fr 3fr 4fr 0.4fr;
-    padding-top: 20px;
+    grid-template: 1fr / 4fr 4fr 0.4fr;
+    padding-top: 15px;
+
+    @media (max-width: 992px) {
+      grid-template: 1fr / 2.5fr 4fr;
+      padding-top: 30px;
+    }
+
+    @media (max-width: 576px) {
+      grid-template: 1fr 1fr / 1fr;
+      row-gap: 10px;
+    }
 
     .rate {
       display: grid;
-      grid-template: 1fr / 1fr 1fr 1fr 1fr 1fr;
+      grid-template: 1fr / repeat(5, 1fr);
       column-gap: 5px;
     }
 
-    &__logo {
+    &__left {
       display: grid;
-      align-items: center;
+      padding: 0 20px;
+      grid-template-rows: 1fr 1fr;
+      grid-template-columns: min-content 1fr;
+      column-gap: 40px;
+      grid-template-areas:
+        "item1 item2 item3"
+        "item1 item4 item4";
+
+      @media (max-width: 992px) {
+        grid-template-rows: 1fr 0.8fr 1fr;
+        padding: 0 15px;
+        grid-template-areas:
+          "item1 item2"
+          "item1 item3"
+          "item4 item4";
+
+        column-gap: 10px;
+        row-gap: 5px;
+      }
+
+      @media (max-width: 576px) {
+        grid-template-rows: min-content 1fr;
+        padding: 0 15px;
+        grid-template-areas:
+          "item1 item2 item3"
+          "item4 item4 item4";
+
+        column-gap: 10px;
+        row-gap: 20px;
+      }
 
       .logo {
         display: grid;
+        align-content: center;
+        grid-area: item1;
+
+        @media (max-width: 576px) {
+          div {
+            height: 60px;
+            width: 60px;
+          }
+        }
+      }
+      .text {
+        display: grid;
         grid-auto-flow: row;
         row-gap: 10px;
-        justify-content: center;
-        justify-items: center;
+        padding-bottom: 30px;
+        grid-area: item2;
+
+        @media (max-width: 992px) {
+          padding-bottom: 0;
+          padding-top: 20px;
+        }
+        @media (max-width: 576px) {
+          padding: 0;
+          align-content: center;
+        }
       }
-    }
-
-    &__description {
-      display: grid;
-      grid-template: 2fr 3fr / 1fr;
-      row-gap: 10px;
-      padding: 0 20px 0 30px;
-
-      &__data {
+      .params {
         display: grid;
         grid-auto-flow: column;
-        justify-content: space-between;
-        padding: 10px 0;
-
-        &__title {
-          display: grid;
-          grid-auto-flow: row;
-          row-gap: 10px;
+        column-gap: 10px;
+        justify-content: end;
+        grid-area: item3;
+        @media (max-width: 992px) {
+          justify-content: flex-start;
         }
 
-        &__params {
-          display: grid;
-          grid-template: 1fr / 1fr 1fr;
-          column-gap: 10px;
+        @media (max-width: 576px) {
+          align-content: center;
         }
+      }
+      .status {
+        grid-area: item4;
       }
     }
 
     &__info {
       display: grid;
-      grid-template: 1.2fr 1fr / 1fr;
-      row-gap: 20px;
+      grid-template: 1fr 1fr / 1fr;
+      row-gap: 40px;
       padding: 0 20px;
+
+      @media (max-width: 992px) {
+        padding: 0 15px;
+      }
+
+      @media (max-width: 576px) {
+        grid-template: 1fr 0.6fr / 1fr;
+        row-gap: 30px;
+
+        &.inactive {
+          grid-template: 1fr 1fr / 1fr;
+          row-gap: 20px;
+
+          .card__info__buttons {
+            grid-template: 1fr / 1fr 1fr;
+            column-gap: 20px;
+          }
+        }
+      }
 
       &__data {
         display: grid;
-        grid-template: 1fr / 1fr 2fr;
+        grid-template: 1fr / 0.7fr 1fr;
+        gap: 20px;
         align-items: center;
+
+        @media (max-width: 576px) {
+          grid-template: 1fr / 1fr 1fr;
+        }
       }
 
       &__icons {
         display: grid;
-        grid-template: 1fr / 1fr 1fr 1fr 1fr;
+        grid-template: 1fr / 1fr 1fr 1fr;
         column-gap: 20px;
       }
 
@@ -77,6 +190,40 @@
         grid-auto-flow: column;
         column-gap: 20px;
       }
+
+      &__buttons {
+        display: grid;
+        grid-template: 1fr / 1fr 1fr;
+        column-gap: 20px;
+
+        @media (max-width: 576px) {
+          grid-template: 1fr 1fr / 1fr;
+          row-gap: 10px;
+        }
+      }
+
+      &__text {
+        display: grid;
+        grid-template: 1fr 1fr / 1fr;
+        @media (max-width: 576px) {
+          grid-template: unset;
+          row-gap: 10px;
+          grid-auto-flow: row;
+        }
+      }
+    }
+  }
+
+  .buttons {
+    display: grid;
+    grid-template: 1fr / repeat(3, 1fr);
+    padding: 15px;
+    column-gap: 20px;
+
+    @media (max-width: 576px) {
+      grid-template: repeat(3, 1fr) / 1fr;
+      padding: 15px 30px;
+      row-gap: 10px;
     }
   }
 }
