--- a/src/widgets/channel/myChannels/moderationChannels/card/UI/styles.module.scss
+++ b/src/widgets/channel/myChannels/moderationChannels/card/UI/styles.module.scss
@@ -1,6 +1,6 @@
 .card {
   display: grid;
-  grid-template: 1fr / 3.5fr 1.5fr 4.5fr 6fr;
+  grid-template: 1fr / 1.2fr 1fr 1.5fr 2fr;
   padding: 10px 20px;
   align-items: center;
 
@@ -58,7 +58,7 @@
       }
 
       span {
-        color: rgba(0, 0, 0, 0.6);
+        color: 5rgba (0, 0, 0, 0.6);
         font-size: 12px;
         font-weight: 500;
       }
@@ -69,8 +69,8 @@
       align-items: center;
       justify-content: center;
       border-radius: 50%;
-      width: 60px;
-      height: 60px;
+      width: 50px;
+      height: 50px;
       border: 0.5px solid var(--Personal-colors-main);
       border-radius: 50%;
       overflow: hidden;
