--- a/src/shared/ui/sliderSubs/styles.module.scss
+++ b/src/shared/ui/sliderSubs/styles.module.scss
@@ -10,6 +10,12 @@
     justify-content: space-between;
     gap: 10px;
 
+    @media (max-width: 576px) {
+      grid-auto-flow: row;
+      justify-content: center;
+      justify-items: center;
+    }
+
     .value {
       color: var(--Personal-colors-black);
       font-style: normal;
