--- a/src/pages/Registration/UI/styles.module.scss
+++ b/src/pages/Registration/UI/styles.module.scss
@@ -1,5 +1,5 @@
 .wrapper {
-  height: 100dvh;
+  height: 110dvh;
   background: var(
     --Gradients-Gradient-5,
     linear-gradient(90deg, #314479 0%, #51377a 100%)
@@ -10,6 +10,7 @@
   align-items: center;
   margin-top: -80px;
   width: 100%;
+  position: fixed;
 
   .container {
     display: grid;
@@ -21,6 +22,25 @@
     width: 50vw;
     max-width: 600px;
     color: #2d2d2d;
+
+    @media (max-width: 992px) {
+      width: 60vw;
+    }
+
+    @media (max-width: 768px) {
+      width: 70vw;
+      padding: 30px;
+    }
+
+    @media (max-width: 576px) {
+      width: 90vw;
+      border-radius: 30px 30px 0px 30px;
+    }
+
+    @media (max-width: 375px) {
+      width: 95vw;
+      padding: 20px;
+    }
 
     .logo {
       width: 100px;
