--- a/src/widgets/authorization/login/forms/confirm-password-form/ui/styles.module.scss
+++ b/src/widgets/authorization/login/forms/confirm-password-form/ui/styles.module.scss
@@ -10,6 +10,10 @@
   column-gap: 10px;
   justify-content: start;
   align-items: center;
+
+  @media (max-width: 576px) {
+    margin-bottom: 10px;
+  }
 }
 
 .texts {
@@ -18,9 +22,18 @@
   row-gap: 10px;
   margin-bottom: 30px;
 
+  @media (max-width: 576px) {
+    margin-bottom: 10px;
+    row-gap: 5px;
+  }
+
   p {
     font-size: 24px;
     font-weight: 600;
+
+    @media (max-width: 576px) {
+      font-size: 16px;
+    }
   }
 
   span {
@@ -61,7 +74,7 @@
     border: 1px solid #d9d9d9;
     background: #fff;
 
-    font-size: 14px;
+    font-size: initial;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
