--- a/src/widgets/authorization/login/forms/forgot-password-form/ui/styles.module.scss
+++ b/src/widgets/authorization/login/forms/forgot-password-form/ui/styles.module.scss
@@ -22,6 +22,10 @@
     font-style: normal;
     font-weight: 600;
     line-height: normal;
+
+    @media (max-width: 576px) {
+      font-size: 16px;
+    }
   }
 
   span {
@@ -64,7 +68,7 @@
     border: 1px solid #d9d9d9;
     background: #fff;
 
-    font-size: 14px;
+    font-size: initial;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
