--- a/src/widgets/authorization/login/forms/login-form/ui/styles.module.scss
+++ b/src/widgets/authorization/login/forms/login-form/ui/styles.module.scss
@@ -30,7 +30,7 @@
     border: 1px solid #d9d9d9;
     background: #fff;
 
-    font-size: 14px;
+    font-size: initial;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
