--- a/src/widgets/authorization/registration/forms/email-form/ui/styles.module.scss
+++ b/src/widgets/authorization/registration/forms/email-form/ui/styles.module.scss
@@ -36,7 +36,7 @@ form {
     border: 1px solid #d9d9d9;
     background: #fff;
 
-    font-size: 14px;
+    font-size: initial;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
